Restore cached files from realm and only retrieve files from dcim when files are not found in realm - clear realm files on refresh - added swipe refresh - initial work to retrieve thumbnail photos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Better Photo Gallery</string>
+    <string name="permission_required">Permission Required</string>
+    <string name="storage_access_required">Access to storage is required for this app to function. Permission can be enabled under app settings.</string>
 </resources>
